--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,9 @@
-fastapi
-uvicorn[standard]
-
+fastapi>=0.109.0
+uvicorn[standard]>=0.27.0
+sqlalchemy>=2.0.25
+asyncpg>=0.29.0
+sqladmin[full]>=0.16.0
+apscheduler>=3.10.4
+openai>=1.10.0
+pydantic-settings>=2.1.0
+alembic>=1.13.0
