--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,10 @@
+[service]
+root = "backend"
+
 [build]
 builder = "DOCKERFILE"
-dockerfilePath = "backend/Dockerfile"
+dockerfilePath = "Dockerfile"
 
 [deploy]
 startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 restartPolicyType = "ON_FAILURE"
-
