Fix duplicate sqlalchemy.url entry in alembic.ini

--- a/alembic/alembic.ini
+++ b/alembic/alembic.ini
@@ -2,6 +2,7 @@
 
 [alembic]
 # path to migration scripts
+script_location = alembic
 sqlalchemy.url = 
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
@@ -17,7 +18,6 @@ file_template = %%(rev)s_%%(slug)s
 # the output encoding used when revision files
 # are written from script.py.mako
 # encodings to use
-sqlalchemy.url = 
 
 [loggers]
 keys = root,sqlalchemy
