--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,6 @@
-blank_issues_enabled: true
+blank_issues_enabled: false
+
+contact_links:
+	- name: Developer guide
+		url: https://github.com/ONTEX/ONTEX/blob/main/docs/DEV_GUIDE.md
+		about: Setup and contributor guidance.
