--- a/alembic.ini
+++ b/alembic.ini
@@ -3,6 +3,7 @@
 [alembic]
 # path to migration scripts
 script_location = alembic
+prepend_sys_path = .
 sqlalchemy.url = 
 
 # template used to generate migration file names; The default value is %%(rev)s_%%(slug)s
